# raytracing

./: CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json
include/raytracer/images/: Pixel.h  RBGImage.h
models/: CMakeLists.txt
models/src/: 4.2_SendingRaysIntoTheScene.cxx  5_AddingASphere.cxx  ppm_helloworld.cxx  sphere.cxx
raytracing/: CMakeLists.txt
raytracing/include/raytracing/images/: Pixel.h  RBGImage.h
raytracing/include/raytracing/materials/: Lambertian.h  Material.h  Metal.h
raytracing/include/raytracing/math/: Constants.h  Conversions.h  Interval.h  Random.h  Ray.h  VectorHelpers.h
raytracing/include/raytracing/scene/: Camera.h
raytracing/include/raytracing/shapes/: HitRecord.h  Hittable.h  HittableList.h  Sphere.h  Surface.h  SurfaceList.h
raytracing/src/raytracing/images/: Pixel.cxx  RGBImage.cxx
raytracing/src/raytracing/materials/: Lambertian.cxx  Material.cxx  Metal.cxx
raytracing/src/raytracing/math/: Interval.cxx  Random.cxx  Ray.cxx  VectorHelpers.cxx
raytracing/src/raytracing/scene/: Camera.cxx
raytracing/src/raytracing/shapes/: HittableList.cxx  Sphere.cxx  SurfaceList.cxx
raytracing/test/images/: Test_RGBImage.cxx
raytracing/test/math/: Test_Ray.cxx
src/: main.cxx  main.f90
src/raytracer/images/: Pixel.cxx  RGBImage.cxx  RGBImage.f90
test/images/: Test_RGBImage.cxx
